Fix admin panel: Job posting,Media status, Global error handling, Security roles